fixed a few issues with resources
also comitting swagger progress
